Wire AlgnmentScoringService
