# swagger_server/models/__init__.py
@@ -3,7 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.body import Body
+from swagger_server.models.score_input import ScoreInput
 from swagger_server.models.definition_pair import DefinitionPair
 from swagger_server.models.feature import Feature
 from swagger_server.models.features import Features
