# swagger_server/models/score_input.py
@@ -10,17 +10,17 @@ from swagger_server.models.definition_pair import DefinitionPair  # noqa: F401,E
 from swagger_server import util
 
 
-class Body(Model):
+class ScoreInput(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, classifier: str=None, pair: DefinitionPair=None):  # noqa: E501
-        """Body - a model defined in Swagger
+        """ScoreInput - a model defined in Swagger
 
-        :param classifier: The classifier of this Body.  # noqa: E501
+        :param classifier: The classifier of this ScoreInput.  # noqa: E501
         :type classifier: str
-        :param pair: The pair of this Body.  # noqa: E501
+        :param pair: The pair of this ScoreInput.  # noqa: E501
         :type pair: DefinitionPair
         """
         self.swagger_types = {
@@ -36,56 +36,60 @@ class Body(Model):
         self._pair = pair
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Body':
+    def from_dict(cls, dikt) -> 'ScoreInput':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The body of this Body.  # noqa: E501
-        :rtype: Body
+        :return: The ScoreInput of this ScoreInput.  # noqa: E501
+        :rtype: ScoreInput
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def classifier(self) -> str:
-        """Gets the classifier of this Body.
+        """Gets the classifier of this ScoreInput.
 
         classifier to use for alignment. 'randomforest' or 'bert'  # noqa: E501
 
-        :return: The classifier of this Body.
+        :return: The classifier of this ScoreInput.
         :rtype: str
         """
         return self._classifier
 
     @classifier.setter
     def classifier(self, classifier: str):
-        """Sets the classifier of this Body.
+        """Sets the classifier of this ScoreInput.
 
         classifier to use for alignment. 'randomforest' or 'bert'  # noqa: E501
 
-        :param classifier: The classifier of this Body.
+        :param classifier: The classifier of this ScoreInput.
         :type classifier: str
         """
+        if classifier is None:
+            raise ValueError("Invalid value for `classifier`, must not be `None`")  # noqa: E501
 
         self._classifier = classifier
 
     @property
     def pair(self) -> DefinitionPair:
-        """Gets the pair of this Body.
+        """Gets the pair of this ScoreInput.
 
 
-        :return: The pair of this Body.
+        :return: The pair of this ScoreInput.
         :rtype: DefinitionPair
         """
         return self._pair
 
     @pair.setter
     def pair(self, pair: DefinitionPair):
-        """Sets the pair of this Body.
+        """Sets the pair of this ScoreInput.
 
 
-        :param pair: The pair of this Body.
+        :param pair: The pair of this ScoreInput.
         :type pair: DefinitionPair
         """
+        if pair is None:
+            raise ValueError("Invalid value for `pair`, must not be `None`")  # noqa: E501
 
         self._pair = pair
